snapshot-tests/tests/snapshots/parser__bad_keys__none.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[wanted]: expected a table key, found an equals
  ┌─ none:1:1
  │
1 │ =3
  │ ^ expected a table key
